--- a/apps/venus/src/app/i18n/resources/en.json
+++ b/apps/venus/src/app/i18n/resources/en.json
@@ -1,5 +1,7 @@
 {
     "translation": {
+        "Blog": "Blog",
+        "AboutUs": "About Us",
         "Open Source": "Open Source",
         "Privacy First": "Privacy First",
         "Alternative": "Alternative",
