--- a/packages/i18n/src/resources/zh-Hans.json
+++ b/packages/i18n/src/resources/zh-Hans.json
@@ -42,24 +42,24 @@
   "Keyboard Shortcuts": "快捷键",
   "Contact Us": "联系我们",
   "Official Website": "官网",
-  "Get in touch!": "Get in touch!",
-  "AFFiNE Community": "AFFiNE Community",
-  "How is AFFiNE Alpha different?": "How is AFFiNE Alpha different?",
-  "Shortcuts": "Shortcuts",
-  "Undo": "Undo",
-  "Redo": "Redo",
-  "Bold": "Bold",
-  "Italic": "Italic",
-  "Underline": "Underline",
-  "Strikethrough": "Strikethrough",
-  "Inline code": "Inline code",
-  "Code block": "Code block",
-  "Link": "Link",
-  "Body text": "Body text",
-  "Heading": "Heading {{number}}",
-  "Increase indent": "Increase indent",
-  "Reduce indent": "Reduce indent",
-  "Markdown Syntax": "Markdown Syntax",
-  "Divider": "Divider",
-  "404 - Page Not Found": "404 - Page Not Found"
+  "Get in touch!": "联系我们！",
+  "AFFiNE Community": "AFFiNE 社区",
+  "How is AFFiNE Alpha different?": "AFFiNE Alpha 有何不同？",
+  "Shortcuts": "快捷键",
+  "Undo": "撤销",
+  "Redo": "重做",
+  "Bold": "粗体",
+  "Italic": "斜体",
+  "Underline": "下划线",
+  "Strikethrough": "删除线",
+  "Inline code": "行内代码",
+  "Code block": "代码块",
+  "Link": "超链接",
+  "Body text": "正文",
+  "Heading": "标题 {{number}}",
+  "Increase indent": "增加缩进",
+  "Reduce indent": "减少缩进",
+  "Markdown Syntax": "Markdown 语法",
+  "Divider": "分隔线",
+  "404 - Page Not Found": "404 - 找不到网页"
 }
