fix: lint error

--- a/packages/i18n/src/resources/en.json
+++ b/packages/i18n/src/resources/en.json
@@ -97,6 +97,7 @@
   "NotLoggedIn": "Currently not logged in",
   "ClearData": "Clear local data",
   "Continue with Google": "Continue with Google",
+  "Set up an AFFiNE account to sync data": "Set up an AFFiNE account to sync data",
   "Signing out will cause the unsynchronized content to be lost": "Signing out will cause the unsynchronized content to be lost",
   "All data has been stored in the cloud": "All data has been stored in the cloud",
   "Stay logged out": "Stay logged out",
