--- a/packages/i18n/src/resources/en.json
+++ b/packages/i18n/src/resources/en.json
@@ -4,7 +4,7 @@
   "It takes up little space on your device": {
     "": "It takes up little space on your device."
   },
-  "AFFINE Cloud": "AFFINE Cloud",
+  "AFFiNE Cloud": "AFFiNE Cloud",
   "It takes up more space on your device": {
     "": "It takes up more space on your device."
   },
