--- a/packages/i18n/src/resources/ru.json
+++ b/packages/i18n/src/resources/ru.json
@@ -166,7 +166,7 @@
   "Shortcuts": "Ярлыки",
   "Share with link": "Поделиться ссылкой",
   "Set up an AFFiNE account to sync data": "Настройте учетную запись AFFiNE для синхронизации данных",
-  "Restore it": "Where is this key used?",
+  "Restore it": "аднавіць яго",
   "Reduce indent": "Уменьшить отступ",
   "Got it": "Понятно",
   "Get in touch!": "Связаться!",
