--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -27,8 +27,9 @@
   },
   "dependencies": {
     "@affine/debug": "workspace:*",
-    "react": "^18.2.0",
     "i18next": "^22.4.10",
+    "next-i18next": "^13.1.5",
+    "react": "^18.2.0",
     "react-i18next": "^12.1.5"
   },
   "devDependencies": {
