--- a/packages/i18n/src/resources/fr.json
+++ b/packages/i18n/src/resources/fr.json
@@ -30,6 +30,7 @@
   "Convert to ": "Convertir en",
   "Created": "Objet créé ",
   "Delete page?": "Supprimer la page ?",
+  "will be permanently deleted": "{{title}} sera définitivement supprimé",
   "Delete permanently?": "Supprimer de manière définitive ? ",
   "Edgeless": "Mode sans bords",
   "Expand sidebar": "Agrandir la barre latérale",
