--- a/packages/i18n/src/resources/ru.json
+++ b/packages/i18n/src/resources/ru.json
@@ -57,6 +57,7 @@
   "Delete": "Удалить",
   "Delete Workspace": "Удалить рабочее пространство",
   "Delete page?": "Удалить страницу?",
+  "will be permanently deleted": "{{title}} будет удален навсегда",
   "Delete permanently": "Удалить навсегда",
   "Delete permanently?": "Удалить навсегда?",
   "Enable": "Включить",
