--- a/packages/i18n/src/resources/zh-Hans.json
+++ b/packages/i18n/src/resources/zh-Hans.json
@@ -72,6 +72,7 @@
   "Collaboration Description": "与其他成员协作需要AFFiNE云服务支持。",
   "Continue with Google": "谷歌登录以继续",
   "Delete page?": "确定要删除页面？",
+  "will be permanently deleted": "{{title}} 将被永久删除",
   "Delete permanently": "永久删除",
   "Delete permanently?": "是否永久删除？",
   "Edgeless": "无界",
